--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
-lib_deps = sstaub/Ticker@^4.4.0
+lib_deps = 
+	sstaub/Ticker@^4.4.0
+	adafruit/DHT sensor library@^1.4.6
