--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	sstaub/Ticker@^4.4.0
 	adafruit/DHT sensor library@^1.4.6
+	adafruit/Adafruit Unified Sensor@^1.1.14
