--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	sstaub/Ticker@^4.4.0
 	adafruit/DHT sensor library@^1.4.6
 	adafruit/Adafruit Unified Sensor@^1.1.14
+	knolleary/PubSubClient@^2.8
